--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,35 @@
 {
-    "name": "lambda-studio/turnstile",
-    "homepage": "https://lambda-studio.com",
-    "keywords": [
-        "cloudflare",
-        "captcha",
-        "turnstile",
-        "lambda-studio",
-        "laravel",
-        "laravel-package"
-    ],
-    "authors": [
-        {
-            "name": "Èrik C. Forés",
-            "email": "soc@erik.cat"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "LambdaStudio\\Turnstile\\": "src/"
-        }
-    },
-    "require": {
-        "php": "^8.1",
-        "illuminate/support": "^8.0|^9.0"
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "LambdaStudio\\Turnstile\\TurnstileServiceProvider"
-            ]
-        }
+  "name": "lambda-studio/turnstile",
+  "homepage": "https://lambda-studio.com",
+  "license": "MIT",
+  "keywords": [
+    "cloudflare",
+    "captcha",
+    "turnstile",
+    "lambda-studio",
+    "laravel",
+    "laravel-package"
+  ],
+  "authors": [
+    {
+      "name": "Èrik C. Forés",
+      "email": "soc@erik.cat"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "LambdaStudio\\Turnstile\\": "src/"
+    }
+  },
+  "require": {
+    "php": "^8.1",
+    "illuminate/support": "^8.0|^9.0"
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "LambdaStudio\\Turnstile\\TurnstileServiceProvider"
+      ]
+    }
+  }
 }
