--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
   },
   "require": {
     "php": "^8.1",
-    "illuminate/support": "^8.0|^9.0"
+    "illuminate/support": "^8.0|^9.0",
+    "illuminate/http": "^8.0|^9.0",
+    "illuminate/contracts": "^8.0|^9.0",
+    "illuminate/broadcasting": "^8.0|^9.0"
   },
   "extra": {
     "laravel": {
